パーティクルの設定を可能に

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,53 @@ Library/
 Yokoge2018.sln
 Yokoge2018.csproj
 Yokoge2018.Editor.csproj
+Temp/__Backupscenes/0.backup
+*.backup
+Temp/UnityLockfile
+Temp/UnityTempFile-0fb1b08f26dfd334380d9b49be166407
+Temp/UnityTempFile-145ef607375f2e84f949566b9deab6c0
+Temp/UnityTempFile-1d9384b9919b4ee41a707260f294d4a9
+Temp/UnityTempFile-1e62c37a87b75e64bab051ae12bfb8b0
+Temp/UnityTempFile-2022de8b078752f4eb151fd8cc32e6db
+Temp/UnityTempFile-23782ace28360ff4db11ac80a39d1d97
+Temp/UnityTempFile-2a76bd806d951294a80300d9d1b77582
+Temp/UnityTempFile-3e183fd25848c1540bf4f6a64ad071cf
+Temp/UnityTempFile-3f7a433cf7bb09b4fb317ecf9f2b3ef2
+Temp/UnityTempFile-439a66bc6681dfa40a612f31a4337995
+Temp/UnityTempFile-44574b423d8537744b45920faad013b1
+Temp/UnityTempFile-4d9ae23630a6137478a972bfa3bd4abf
+Temp/UnityTempFile-4e5b578d572c7214ca84de880c64f565
+Temp/UnityTempFile-5253b13cd113c9140b6fce2d03658d14
+Temp/UnityTempFile-5c1a35322c2738d45a87ea6dc2bd0acf
+Temp/UnityTempFile-64fbb320e8dd9c9418ed6e4f070526d9
+Temp/UnityTempFile-656117e4aac6ad64fa99f803bb719dba
+Temp/UnityTempFile-6bff642fe975b35429aa89e404c24b3a
+Temp/UnityTempFile-6d88fd3d3d5227c4bbb9834bfb8f2ad0
+Temp/UnityTempFile-6eed4f5dee84b7e46810f47a02fc49cb
+Temp/UnityTempFile-72f239829f43abf46a1915446036eb47
+Temp/UnityTempFile-735083da557d64746b518e07b9c3ef35
+Temp/UnityTempFile-74986bbffb31c6c4bba5c2a3c9d1f5e4
+Temp/UnityTempFile-750cd59b50e6b4144ba013217e279dc3
+Temp/UnityTempFile-7c35e954ddc9c6243b577b75ad5e6793
+Temp/UnityTempFile-7cae3944248d55b4fbe30ea213d5954a
+Temp/UnityTempFile-804697d24d6d30e4a995e1e0526fcd3c
+Temp/UnityTempFile-829c3449fe179284ca2df7e85cc90a92
+Temp/UnityTempFile-8eba3389b8311ad4f960ba597fd7fbb0
+Temp/UnityTempFile-8faf771890e88474b9d7a425748978ac
+Temp/UnityTempFile-95592d05c5ee1d34380dad4dd79b69e8
+Temp/UnityTempFile-98ce68d98ed1b4e40858cf3e1cf247b4
+Temp/UnityTempFile-a91d38f17fc816543b702ee06550506d
+Temp/UnityTempFile-b38d531c3b0db9b4bbed4cad5205c5a6
+Temp/UnityTempFile-b9ec34f270edce149aa544305e42313d
+Temp/UnityTempFile-c13e000cced8918438fb24ba4d0f09e9
+Temp/UnityTempFile-c1524b2bc4467df40a2cd13de8fd1383
+Temp/UnityTempFile-c3bbfc81e17fe074aaae3b6c6cdeece5
+Temp/UnityTempFile-cf5a52ef4ae66e74584e9b68abbb611d
+Temp/UnityTempFile-f6f168b5429b4f643b9df5a10121a1f4
+Temp/UnityVS_obj/Debug/build.force
+Temp/UnityVS_obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+Temp/UnityVS_obj/Debug/YokogeTeamProject2018.csproj.CoreCompileInputs.cache
+Temp/UnityVS_obj/Debug/YokogeTeamProject2018.Editor.csproj.CoreCompileInputs.cache
+Temp/WanzyeeStudio/Clipboard/Data/-203708
+YokogeTeamProject2018.csproj
+YokogeTeamProject2018.csproj
