特殊アクションキーによる可変モード変換

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,21 @@ Temp/UnityVS_obj/Debug/YokogeTeamProject2018.Editor.csproj.CoreCompileInputs.cac
 Temp/WanzyeeStudio/Clipboard/Data/-203708
 YokogeTeamProject2018.csproj
 YokogeTeamProject2018.csproj
+Temp/UnityTempFile-0085d329b06e6164d80b9f0359c40e66
+Temp/UnityTempFile-02469976ede21424ba57b9d8e409a08b
+Temp/UnityTempFile-292b66fec6e487049ada4f835aa5e95a
+Temp/UnityTempFile-463c571d36acd4f49adb51b14b389164
+Temp/UnityTempFile-47513ba1b02f2924bb31b3d1ebcceb55
+Temp/UnityTempFile-564e49f3da406b147bd14a3d5f3037ab
+Temp/UnityTempFile-6e8bb5076d7574a40a7e892b70b1c9e9
+Temp/UnityTempFile-714cd577bfc28de4da51fbe098726716
+Temp/UnityTempFile-7ec00e7689e459d4f841d3814bfc4ec1
+Temp/UnityTempFile-85e71cf6b6990024c84fe87fc49d3b58
+Temp/UnityTempFile-92ad98d480cff874f88b25ae33bfec44
+Temp/UnityTempFile-96bf7ed1bcd1b8349835c321f352ee03
+Temp/UnityTempFile-9a9792c1c97ec7f40af86953e2ce3d07
+Temp/UnityTempFile-9db7a2d5c3ff329458a490c51736cbe3
+Temp/UnityTempFile-b435c65ce97a11b4f88e1611fde0f990
+Temp/UnityTempFile-b9df129fa85d8d249b2fb47858273bee
+Temp/UnityTempFile-cdd6465c289371744bae1e1bdfc27146
+Temp/UnityTempFile-e870d2571b9096c4391019c098e9c092
