アサルトの実装

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,145 @@ Temp/UnityTempFile-b435c65ce97a11b4f88e1611fde0f990
 Temp/UnityTempFile-b9df129fa85d8d249b2fb47858273bee
 Temp/UnityTempFile-cdd6465c289371744bae1e1bdfc27146
 Temp/UnityTempFile-e870d2571b9096c4391019c098e9c092
+Temp/UnityTempFile-13ebc03509dde8f499c4d182286f61a7
+Temp/UnityTempFile-23b4fd7415761454cb3cc5aed8766295
+Temp/UnityTempFile-2769312ec6e094540b616dbe852cfdf1
+Temp/UnityTempFile-282e624a19bc52b4d96a42d83c2d1819
+Temp/UnityTempFile-2bde30f6c8b69ab4c9c472b6df58cc19
+Temp/UnityTempFile-3f05eaa3e9a43ce4b924ff6335594b08
+Temp/UnityTempFile-44f049149f3ac4e4aa808f3a694384ac
+Temp/UnityTempFile-4a3a83fc75d64ea41846dbf871543582
+Temp/UnityTempFile-7f9f3a22fd3063d4e8d0ecc3d40a5a15
+Temp/UnityTempFile-8bda5386551c3b340bc08385159a58de
+Temp/UnityTempFile-90a74ade2f74cfb4a954d1bdb15c48db
+Temp/UnityTempFile-981655e0e255fd846a8392d0e71c6ac7
+Temp/UnityTempFile-dcb68d167053ad64b9295f585352e5e4
+Temp/UnityTempFile-e69f8bb617275b34faf3cfbde4295cf7
+Temp/UnityTempFile-fb4458acbcc32a04d99da21b642b3b80
+Temp/UnityVS_bin/Debug/Assembly-CSharp.dll
+Temp/UnityVS_bin/Debug/Assembly-CSharp.pdb
+Temp/UnityVS_bin/Debug/nunit.framework.dll
+Temp/UnityVS_bin/Debug/nunit.framework.xml
+Temp/UnityVS_bin/Debug/UnityEditor.dll
+Temp/UnityVS_bin/Debug/UnityEditor.xml
+Temp/UnityVS_bin/Debug/UnityEngine.AccessibilityModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.AccessibilityModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.AIModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.AIModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.Analytics.dll
+Temp/UnityVS_bin/Debug/UnityEngine.Analytics.xml
+Temp/UnityVS_bin/Debug/UnityEngine.AnimationModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.AnimationModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.ARModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.ARModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.AssetBundleModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.AssetBundleModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.AudioModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.AudioModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.ClothModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.ClothModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.ClusterInputModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.ClusterInputModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.ClusterRendererModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.ClusterRendererModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.CoreModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.CoreModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.CrashReportingModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.CrashReportingModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.DirectorModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.DirectorModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.dll
+Temp/UnityVS_bin/Debug/UnityEngine.GameCenterModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.GameCenterModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.GoogleAudioSpatializer.dll
+Temp/UnityVS_bin/Debug/UnityEngine.GoogleAudioSpatializer.xml
+Temp/UnityVS_bin/Debug/UnityEngine.GridModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.GridModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.HoloLens.dll
+Temp/UnityVS_bin/Debug/UnityEngine.HoloLens.xml
+Temp/UnityVS_bin/Debug/UnityEngine.ImageConversionModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.ImageConversionModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.IMGUIModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.IMGUIModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.InputModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.InputModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.JSONSerializeModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.JSONSerializeModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.Networking.dll
+Temp/UnityVS_bin/Debug/UnityEngine.Networking.xml
+Temp/UnityVS_bin/Debug/UnityEngine.ParticlesLegacyModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.ParticlesLegacyModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.ParticleSystemModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.ParticleSystemModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.PerformanceReportingModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.PerformanceReportingModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.Physics2DModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.Physics2DModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.PhysicsModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.PhysicsModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.Purchasing.dll
+Temp/UnityVS_bin/Debug/UnityEngine.Purchasing.xml
+Temp/UnityVS_bin/Debug/UnityEngine.ScreenCaptureModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.ScreenCaptureModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.SharedInternalsModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.SharedInternalsModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.SpatialTracking.dll
+Temp/UnityVS_bin/Debug/UnityEngine.SpatialTracking.xml
+Temp/UnityVS_bin/Debug/UnityEngine.SpriteMaskModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.SpriteMaskModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.SpriteShapeModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.SpriteShapeModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.StandardEvents.dll
+Temp/UnityVS_bin/Debug/UnityEngine.StandardEvents.xml
+Temp/UnityVS_bin/Debug/UnityEngine.StyleSheetsModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.StyleSheetsModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.TerrainModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.TerrainModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.TerrainPhysicsModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.TerrainPhysicsModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.TestRunner.dll
+Temp/UnityVS_bin/Debug/UnityEngine.TestRunner.xml
+Temp/UnityVS_bin/Debug/UnityEngine.TextRenderingModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.TextRenderingModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.TilemapModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.TilemapModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.Timeline.dll
+Temp/UnityVS_bin/Debug/UnityEngine.Timeline.xml
+Temp/UnityVS_bin/Debug/UnityEngine.UI.dll
+Temp/UnityVS_bin/Debug/UnityEngine.UI.xml
+Temp/UnityVS_bin/Debug/UnityEngine.UIAutomation.dll
+Temp/UnityVS_bin/Debug/UnityEngine.UIAutomation.xml
+Temp/UnityVS_bin/Debug/UnityEngine.UIElementsModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.UIElementsModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.UIModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.UIModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.UNETModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.UNETModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.UnityAnalyticsModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.UnityAnalyticsModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.UnityConnectModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.UnityConnectModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.UnityWebRequestAudioModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.UnityWebRequestAudioModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.UnityWebRequestModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.UnityWebRequestModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.UnityWebRequestTextureModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.UnityWebRequestTextureModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.UnityWebRequestWWWModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.UnityWebRequestWWWModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.VehiclesModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.VehiclesModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.VideoModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.VideoModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.VRModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.VRModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.WebModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.WebModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.WindModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.WindModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.xml
+Temp/UnityVS_obj/Debug/Assembly-CSharp.dll
+Temp/UnityVS_obj/Debug/Assembly-CSharp.pdb
+Temp/UnityVS_obj/Debug/YokogeTeamProject2018.csproj.CopyComplete
+Temp/UnityVS_obj/Debug/YokogeTeamProject2018.csproj.FileListAbsolute.txt
+Temp/UnityVS_obj/Debug/YokogeTeamProject2018.csprojResolveAssemblyReference.cache
