Eqition_Packの導入(ChangeModeのみ)

--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,31 @@ Temp/UnityVS_obj/Debug/Assembly-CSharp.pdb
 Temp/UnityVS_obj/Debug/YokogeTeamProject2018.csproj.CopyComplete
 Temp/UnityVS_obj/Debug/YokogeTeamProject2018.csproj.FileListAbsolute.txt
 Temp/UnityVS_obj/Debug/YokogeTeamProject2018.csprojResolveAssemblyReference.cache
+Temp/UnityTempFile-03f4d49fd0974a44fac3d682a758799e
+Temp/UnityTempFile-041dd0ffb771c8e4fb1999a01cef99a9
+Temp/UnityTempFile-0963833bcc989284cb81cbea1fbb38cf
+Temp/UnityTempFile-13245daf88fbdaf4e9af2eab0d218cfb
+Temp/UnityTempFile-153256893e6545a4a8358a8ff6d2b397
+Temp/UnityTempFile-1659914bf8c990146b65e549a39b1bc7
+Temp/UnityTempFile-195801822b4a7f54f80586cecb01a5c6
+Temp/UnityTempFile-2b86ad8933d0fed4d9c35b0c5ad04d83
+Temp/UnityTempFile-3790cd277d3693f4c9a9d88ad59bad50
+Temp/UnityTempFile-3bf06cc6dd3cc7943bb02ee282458a4b
+Temp/UnityTempFile-44411db197a488541b5505bbff7ce434
+Temp/UnityTempFile-44ae8da361d0c3249b2184773e444913
+Temp/UnityTempFile-53398651504df6044b095cbe59f4c595
+Temp/UnityTempFile-6158542839e1c0548bdd84b0625312b4
+Temp/UnityTempFile-627e48549a7420548aa913313e753b6c
+Temp/UnityTempFile-6cc8c7b0edc24b34dba9054d9b310905
+Temp/UnityTempFile-8f0258ba911947b4a9dcc9a9cc2b8357
+Temp/UnityTempFile-95f54eaa4647c234285b9f58475f8ab7
+Temp/UnityTempFile-9bef83632acd62e42bceae29b52c4fde
+Temp/UnityTempFile-9ca3aac502e12d3479957b227833b15f
+Temp/UnityTempFile-b1cc741b434703e45868a848eda720ea
+Temp/UnityTempFile-b7fa53a648a875d48bbc31ddf6ac8eec
+Temp/UnityTempFile-b9c724fd05a2f344b8ba112ff1345203
+Temp/UnityTempFile-be5adc05dba15e44cb1926816a2983d6
+Temp/UnityTempFile-c59fff4b25783f64ca20bc46df239e6a
+Temp/UnityTempFile-e24d17276315ea94e8735f4670a0f089
+Temp/UnityTempFile-fa35a738d6d7cf54381112a177a470b4
+Temp/UnityTempFile-fcb5ea0d63bc8df478555dd0322d276a
