数値の微調整

--- a/.gitignore
+++ b/.gitignore
@@ -250,3 +250,9 @@ Temp/UnityTempFile-c59fff4b25783f64ca20bc46df239e6a
 Temp/UnityTempFile-e24d17276315ea94e8735f4670a0f089
 Temp/UnityTempFile-fa35a738d6d7cf54381112a177a470b4
 Temp/UnityTempFile-fcb5ea0d63bc8df478555dd0322d276a
+Temp/UnityTempFile-57ec7a0f048ed3347b0d144f2cbdc2be
+Temp/UnityTempFile-73ee671209357294eb2f7a1c716ace97
+Temp/UnityTempFile-89a3fb93bbce69448b85141902d3f5c1
+Temp/UnityTempFile-b6c1700b871258b42becb2d089366108
+Temp/UnityTempFile-efda74d906c0e154d83f19cbc4fc3471
+YokogeTeamProject2018.csproj
