--- a/.gitignore
+++ b/.gitignore
@@ -256,3 +256,39 @@ Temp/UnityTempFile-89a3fb93bbce69448b85141902d3f5c1
 Temp/UnityTempFile-b6c1700b871258b42becb2d089366108
 Temp/UnityTempFile-efda74d906c0e154d83f19cbc4fc3471
 YokogeTeamProject2018.csproj
+Temp/UnityTempFile-a3fed74a9afdbc344b67f6e3b1a80e52
+Temp/UnityTempFile-cb9117fefffc3814c90d651a8c0af557
+Temp/UnityTempFile-cde1cb7da55d7ce40aad7f41fb96cf5c
+Temp/UnityVS_bin/Debug/Boo.Lang.dll
+Temp/UnityVS_bin/Debug/mscorlib.dll
+Temp/UnityVS_bin/Debug/System.dll
+Temp/UnityVS_bin/Debug/System.Xml.dll
+Temp/UnityVS_bin/Debug/System.Xml.Linq.dll
+Temp/UnityVS_bin/Debug/Unity.Locator.dll
+Temp/UnityVS_bin/Debug/Unity.PackageManagerUI.Editor.dll
+Temp/UnityVS_bin/Debug/UnityEditor.StandardEvents.dll
+Temp/UnityVS_bin/Debug/UnityEngine.BaselibModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.BaselibModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.CloudWebServicesModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.CloudWebServicesModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.FacebookModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.FacebookModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.HotReloadModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.HotReloadModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.SpatialTrackingModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.SpatialTrackingModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.SubstanceModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.SubstanceModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.TimelineModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.TimelineModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.TLSModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.TLSModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.UmbraModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.UmbraModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.UnityWebRequestAssetBundleModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.UnityWebRequestAssetBundleModule.xml
+Temp/UnityVS_bin/Debug/UnityEngine.XRModule.dll
+Temp/UnityVS_bin/Debug/UnityEngine.XRModule.xml
+Temp/UnityVS_bin/Debug/UnityScript.dll
+Temp/UnityVS_bin/Debug/UnityScript.Lang.dll
+YokogeTeamProject2018.sln
