--- a/YokogeTeamProject2018.csproj
+++ b/YokogeTeamProject2018.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>2017.4.3f1</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -246,6 +248,8 @@
     <Compile Include="Assets\Script\Charactor\Enemy\E004_Mage\E004_Dameged.cs" />
     <Compile Include="Assets\Script\Charactor\Enemy\E004_Mage\E004_Move.cs" />
     <Compile Include="Assets\Script\Charactor\Enemy\E004_Mage\Mage.cs" />
+    <Compile Include="Assets\Script\Charactor\Enemy\E005_Nest\E005_Default.cs" />
+    <Compile Include="Assets\Script\Charactor\Enemy\E005_Nest\EnemyNest.cs" />
     <Compile Include="Assets\Script\Charactor\Enemy\Equition\ChangeMode_Adapter.cs" />
     <Compile Include="Assets\Script\Charactor\Enemy\Equition\EndAnimation.cs" />
     <Compile Include="Assets\Script\Charactor\Enemy\Equition\Endtime.cs" />
