--- a/.gitignore
+++ b/.gitignore
@@ -292,3 +292,5 @@ Temp/UnityVS_bin/Debug/UnityEngine.XRModule.xml
 Temp/UnityVS_bin/Debug/UnityScript.dll
 Temp/UnityVS_bin/Debug/UnityScript.Lang.dll
 YokogeTeamProject2018.sln
+Temp/UnityTempFile-ed2f4489bbec5024f9b444adc54632ed
+Temp/UnityTempFile-01626499813edd8498443ec400c8fbe5
