--- a/YokogeTeamProject2018.Editor.csproj
+++ b/YokogeTeamProject2018.Editor.csproj
@@ -360,6 +360,8 @@
     <None Include="Assets\TestAsset\Plugin\Movinarc\PackageUninstaller\README.txt" />
     <None Include="Assets\TestAsset\Plugin\RenameTool\Readme.txt" />
     <None Include="Assets\TestAsset\Plugin\WanzyeeStudio\Plugins\Editor\Clipboard_Lite_Editor.xml" />
+    <None Include="Assets\TestAsset\Script for create 2D background with parallax\Script\BackGround\Readme(BackGround).txt" />
+    <None Include="Assets\TestAsset\Script for create 2D background with parallax\Script\Player Controller\Readme (Controller2D).txt" />
     <None Include="Assets\UIpack\Spritesheet\blueSheet.xml" />
     <None Include="Assets\UIpack\Spritesheet\greenSheet.xml" />
     <None Include="Assets\UIpack\Spritesheet\greySheet.xml" />
