--- a/YokogeTeamProject2018.csproj
+++ b/YokogeTeamProject2018.csproj
@@ -374,6 +374,7 @@
     <Compile Include="Assets\Script\Charactor\Player\Mode\P_Zyaku4.cs" />
     <Compile Include="Assets\Script\Charactor\Player\Mode\PlayerCommonAction.cs" />
     <Compile Include="Assets\Script\Charactor\Player\ModeFlag.cs" />
+    <Compile Include="Assets\Script\Charactor\Player\Player_IsGround.cs" />
     <Compile Include="Assets\Script\Charactor\Player\PlayerStatus.cs" />
     <Compile Include="Assets\Script\Charactor\Rhino.cs" />
     <Compile Include="Assets\Script\Charactor\TestEnemy.cs" />
