--- a/.gitignore
+++ b/.gitignore
@@ -299,3 +299,5 @@ Temp/UnityTempFile-01626499813edd8498443ec400c8fbe5
 YokogeTeamProject2018.csproj
 YokoGeTeam2018.sln
 YokoGeTeam2018.sln
+
+YokogeTeamProject2018.sln
