--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -73,6 +73,10 @@
     <Compile Include="Assets\Script\Canvas\ObjectUIGenerator.cs" />
     <Compile Include="Assets\Script\Canvas\TestEnemyUI.cs" />
     <Compile Include="Assets\Script\Charactor\Charactor.cs" />
+    <Compile Include="Assets\Script\Charactor\Enemy\Boss\Boss_Attack1.cs" />
+    <Compile Include="Assets\Script\Charactor\Enemy\Boss\Boss_Attack2.cs" />
+    <Compile Include="Assets\Script\Charactor\Enemy\Boss\Boss_Counter.cs" />
+    <Compile Include="Assets\Script\Charactor\Enemy\Boss\Boss_Walk.cs" />
     <Compile Include="Assets\Script\Charactor\Enemy\E003_Gobrin\E003_Attack.cs" />
     <Compile Include="Assets\Script\Charactor\Enemy\E003_Gobrin\E003_Dameged.cs" />
     <Compile Include="Assets\Script\Charactor\Enemy\E003_Gobrin\E003_Move.cs" />
