--- a/.gitignore
+++ b/.gitignore
@@ -296,3 +296,4 @@ YokogeTeamProject2018.sln
 Temp/UnityTempFile-ed2f4489bbec5024f9b444adc54632ed
 Temp/UnityTempFile-01626499813edd8498443ec400c8fbe5
 YokogeTeamProject2018.csproj
+*.csproj
